# Opacity-MicroMap-SDK

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  c-cpp.yml
benchmark/: CMakeLists.txt  benchmark.cpp  bm_ommbake.cpp
docs/: integration_guide.md
integration/: CMakeLists.txt
integration/omm-lib-nvrhi/: omm-lib-nvrhi.cpp
integration/omm-sdk-nvrhi/: NVRHIOmmBakeIntegration.cpp  NVRHIWrapper.cpp  omm-sdk-nvrhi.cpp  omm-sdk-nvrhi.h
integration/omm-sdk-nvrhi/omm-sdk-nvrhi/: NVRHIOmmBakeIntegration.h  NVRHIWrapper.h
libraries/omm-gpu-nvrhi/: CMakeLists.txt  omm-gpu-nvrhi.cpp
libraries/omm-lib/: CMakeLists.txt  ShaderCompilation.cmake  shaders.cfg
libraries/omm-lib/include/: omm.h  omm.hpp
libraries/omm-lib/src/: bake.aps  bake_cpu_impl.cpp  bake_cpu_impl.h  bake_gpu_impl.cpp  bake_gpu_impl.h  bake_kernels_cpu.h  debug_impl.cpp  log.h  serialize_impl.cpp  serialize_impl.h  shader_bindings.cpp  shader_bindings.h  texture_impl.cpp  texture_impl.h  version.h
libraries/omm-lib/src/util/: math.h  texture.h
libraries/omm-util/: CMakeLists.txt
libraries/omm-util/shared/: geometry.h
omm-lib/: CMakeLists.txt
omm-lib/include/: omm.h
omm-lib/src/: bake_cpu_impl.cpp  bake_kernels_cpu.h  debug_impl.cpp
omm-sdk/: CMakeLists.txt  ShaderCompilation.cmake
omm-sdk/include/: omm.h  omm.hpp
omm-sdk/scripts/: _interface_gen_c.py  _interface_gen_cpp.py  interface_gen.py  omm.json  omm_footer_cpp.txt  omm_header_c.txt  omm_header_cpp.txt
omm-sdk/shaders/: clear_buffer.cs.hlsl  clear_buffer.cs.resources.hlsli  omm.hlsli  omm_clear_buffer.cs.resources.hlsli  omm_common.hlsli  omm_compress.cs.hlsl  omm_compress.cs.resources.hlsli  omm_copy_omm_index_buffer.cs.hlsl  omm_copy_omm_index_buffer.cs.resources.hlsli  omm_desc_patch.cs.hlsl  omm_desc_patch.cs.resources.hlsli  omm_global_cb.hlsli  omm_hash_table.hlsli  omm_index_write.cs.hlsl  omm_init_buffers_cs.cs.hlsl  omm_init_buffers_cs.cs.resources.hlsli  omm_init_buffers_gfx.cs.hlsl  omm_post_build_info.cs.hlsl  omm_post_build_info.cs.resources.hlsli  omm_rasterize.cs.hlsl  omm_rasterize.cs.resources.hlsli  omm_rasterize.gs.hlsl  omm_rasterize.ps.hlsl  omm_rasterize.resources.hlsli  omm_rasterize.vs.hlsl  omm_rasterize_common.hlsli  omm_rasterize_common.vs.hlsli  omm_rasterize_cs.hlsli  omm_rasterize_debug.ps.hlsl  omm_rasterize_debug.vs.hlsl  omm_rasterize_ps.hlsli  omm_resample_common.hlsli  omm_work_setup_bake_only_cs.cs.hlsl  omm_work_setup_bake_only_gfx.cs.hlsl  omm_work_setup_common.hlsli  omm_work_setup_cs.cs.hlsl  omm_work_setup_cs.cs.resources.hlsli  omm_work_setup_gfx.cs.hlsl  omm_work_setup_gfx.cs.resources.hlsli  platform.hlsli  (+1 more)
omm-sdk/src/: bake.cpp  bake.rc  bake_cpu_impl.cpp  bake_cpu_impl.h  bake_gpu_impl.cpp  bake_gpu_impl.h  bake_kernels_cpu.h  debug_impl.cpp  debug_impl.h  defines.h  log.h  serialize_impl.cpp  serialize_impl.h  shader_bindings.cpp  shader_bindings.h  shader_registry.h  std_allocator.h  std_containers.h  texture_impl.cpp  texture_impl.h  version.h
shared/: CMakeLists.txt
shared/shared/: bird.h  bit_tricks.h  cpu_raster.h  geometry.h  math.h  parse.h  texture.h  triangle.h
support/scripts/: CMakeLists.txt  postinstall.cmake
support/tests/: CMakeLists.txt  test_basic.cpp  test_minimal_sample.cpp  test_omm_bake_cpu.cpp  test_omm_bake_gpu.cpp  test_omm_indexing.cpp  test_omm_log.cpp  test_raster_line.cpp  test_raster_tri.cpp  test_subdiv.cpp  test_tesselator.cpp  test_texture.cpp  test_util.cpp
support/tests/nvrhi/: nvrhi_environment.h  nvrhi_wrapper.cpp
support/tests/util/: image.h  omm.h  omm_histogram.cpp  omm_histogram.h  stb_lib.cpp
tests/: CMakeLists.txt  main.cpp  nvrhi_environment.h  test_basic.cpp  test_minimal_sample.cpp  test_omm_bake_cpu.cpp  test_omm_bake_gpu.cpp  test_omm_indexing.cpp  test_omm_log.cpp  test_omm_validation.cpp  test_raster.cpp  test_raster_line.cpp  test_raster_tri.cpp  test_subdiv.cpp  test_texture.cpp  test_util.cpp
tests/nvrhi/: nvrhi_environment.cpp  nvrhi_wrapper.cpp
tests/util/: image.h  omm.h  omm_histogram.cpp  omm_histogram.h
tools/viewer/: CMakeLists.txt  OpenSans_Regular.h  background_vs_ps.hlsl  shaders.hlsl  util.hlsli  viewer_app.cpp
util/viewer_app/: CMakeLists.txt
util/viewer_app/app/: CMakeLists.txt  basic_triangle.cpp  shader_cb.h  shaders.hlsl
util/viewer_app/feature_demo/: CMakeLists.txt  background_vs_ps.hlsl  basic_triangle.cpp  shader_cb.h  shaders.hlsl
viewer/: CMakeLists.txt  background_vs_ps.hlsl  basic_triangle.cpp  shader_cb.h  shaders.cfg  shaders.hlsl  util.hlsli  viewer_app.cpp
